--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mcp_mappings=20191222-1.14.3
-minecraft_version=1.14.4
-forge_version=28.1.107
-mod_version=0.0.0.1
+forge_version=31.1.0
+mcp_mappings=20200301-mixed-1.15.2
+minecraft_version=1.15.2
+mod_version=0.1.0.1
